Changelog
=========

1.0b4 (unreleased)
------------------

- Nothing changed yet.


1.0b3 (2015-06-12)
------------------

* Adds 'Content-Type' header in the return of views.
  [idgserpro]


1.0b2 (2010-12-06)
------------------

* Made it possible to work with named vocabulary factories
* Fixed some unicode issues

1.0b1 (2010-10-20)
------------------

* Plone 4 compatibility

0.1 - (2009-10-30)
------------------

* First public release
