@@ -4,7 +4,9 @@ Changelog
 1.0b4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- If vocabulary_factory implements z3c.formwidget.query.interfaces.IQuerySource
+  try to search in it
+  [ale-rt]
 
 
 1.0b3 (2015-06-12)
@@ -29,4 +31,3 @@ Changelog
 ------------------
 
 * First public release
-
